Fix grid row size and gap

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ nav {
 .work-group {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   grid-row-gap: 2em;
   justify-items: center;
   margin-bottom: 0.5em;
@@ -310,8 +310,8 @@ nav {
   .work-group {
     margin-bottom: 4em;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-row-gap: 0;
+    grid-template-rows: repeat(2, auto);
+    grid-row-gap: 2em;
   }
 
   .work-container {
@@ -320,7 +320,7 @@ nav {
   }
 
   .work-container:last-of-type {
-    width: 50vw;
+    width: 45vw;
     grid-area: 2 / 1 / 3 / 3;
   }
 
@@ -358,20 +358,32 @@ nav {
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1440px) {
   body {
     margin: 1.5em 16em;
   }
 
   .info-wrapper {
     height: fit-content;
-    width: 25vw;
+    width: 50%;
     margin: 2em 0 4em 0;
     font-size: 1.1rem;
   }
 
+  .work-group {
+    margin-bottom: 4em;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+    grid-row-gap: 2em;
+  }
+
   .work-container {
-    width: 27vw;
-    margin: 1.5em 0 2em 0;
+    width: 32vw;
+    margin: 0;
+  }
+
+  .work-container:last-of-type {
+    width: 40vw;
+    grid-area: 2 / 1 / 3 / 3;
   }
 }
